# SysMuse

./: .gitignore  README.md  setup_windows.bat
PluginPresetCapture/: CMakeLists.txt  clean_and_build.bat
PluginPresetCapture/Source/: Main.cpp  MainComponent.cpp  MainComponent.h  PluginEditorWindow.cpp  PluginEditorWindow.h  ProjectInfo.h
conversion-hub/: .gitignore  ExpressionsGuide.md  booleanops.md  derived-text-fields.md  pom.xml  project_structure.md  readme.md  regex-operations.md  sql-analysis-documentation.md
conversion-hub/config/: custom_ops.json  expressions.json  params.json  sysconfig.json
csv-to-json-converter/: .gitignore  README.md  pom.xml
data-vis/: .gitignore  README.md  pom.xml
esindex/: docker-compose.yml  package.json  project_instructions.md  project_synopsis.md  tsconfig.json
esindex/config/: convertEnronEmails.json  convertEnronEmailsSubset.json  convertTedTalks.json  convertTedTalksSubset.json  corpusSnapshotExample.json  enron.json  enronKeywordSearch.json  enronSnapshotOperation.json  enronTermTestBatch1.json  enronTermTestBatch2.json  enronTermTestRem.json  enron_subset_import.json  exhaustiveSearchMaxHits.json  exhaustiveSearchMinHits.json  exhaustiveSearchRandom.json  importCorpusEnron.json  importCorpusTed.json  importCorpusTedDesc.json  importCorpusTedOptions.json  importCorpusTedPhrase.json  importCorpusTedTitle.json  importIndexEnron.json  importIndexTed.json  importIndexTedKeyword.json  importIndexTedMixed.json  importStopwords.json  importStopwordsConvert.json  importStopwordsEnron.json  indexFields.json  jsonSearchExample.json  keywordSearchExample.json  searchTermTestBatch1.json  searchTermTestBatch2.json  searchTermTestBatchAll.json  searchTermTestBatchRem.json  searchTermTestExample.json  setUnionExample.json  setupEnronCorpusType.json  setupEnronDocumentTypes.json  setupTedCorpusType.json  (+11 more)
esindex/prisma/: schema.prisma
esindex/src/: importEnron.ts  importTedTalks.ts  index.ts
expression-manager/: README.MD  pom.xml  setup_project.bat
expression-manager/config/: custom_operations_test.json  test_operational_expressions.json  test_verified_pass.json
fusion-kit/: ARCHITECTURE.md  CLAUDE.md  CLAUDE_CODE_CONTEXT.md  IMPLEMENTATION_PLAN.md  INVENTORY.md  README.md
fusion-kit/docs/: DIRECTORY_STRUCTURE.md  FEATURE_PROCESS.md  MEASUREMENT_GUIDE.md
fusion-kit/fusionkit/: __init__.py
fusion-kit/legacy/: ComponentBase.py  DesignBase.py  DesignBaseTest.py  DesignBaseTest2.py  DesignContext.py  DesignContextIterator.py  DesignStepBase.py  ExtrudeHandlerBase.py  GLHiHatCyl.py  GLPipeClamp11.py  LunaWrench7.py  ShapeHandlerBase.py  SketchBase.py  SketchEnums.py
fusion-kit/scripts/: extract_timeline.py  run_component.py  run_kit.py
fusion-kit/tests/: test_fastener_style.py  test_fasteners.py  test_param_loader.py  test_slot_shape.py  test_timeline_extractor.py
ip-port/: .env.example  .gitignore  CLAUDE.md  CLAUDE_CODE_GUIDE.md  README.md  SESSION_CONTEXT.md  docker-compose.yml  package.json  tsconfig.json
ip-port/clients/: base-client.ts  cached-clients.ts  odp-enriched-citation-client.ts  odp-file-wrapper-client.ts  odp-office-action-rejection-client.ts  odp-office-action-text-client.ts  odp-ptab-client.ts  patentsview-client.ts
ip-port/config/: assignee-variants.json  broadcom-assignees.json  citator-watchlist.json  company-slug-aliases.json  competitors.json  cpc-descriptions.json  doc-gaps-queue.json  doc-quality-flags.json  enrichment-queue.json  heatmap-batch-config.json  patent-stopwords.json  portfolio-affiliates.json  scoring-weights.json  sector-breakout-v2.json  sector-damages.json  sector-facets.json  sector-taxonomy-cpc-only.json  super-sectors.json  user-preferences-seed.json  user-weight-profiles.json
ip-port/docs/: API_REFERENCE.md  ATTORNEY_SPREADSHEET_GUIDE.md  AVAGO_AV_ANALYSIS_APPROACH.md  FILE_INDEX.md  (+54 more)
judicial-transcripts/: .env.example  .eslintrc.json  .gitignore  CLAUDE.md  COMMANDS-QUICK-REFERENCE.md  Makefile  README.md  api-documentation.md  check-attorney-linkage.ts  check-attorneys.ts  check-redirect-recross.ts  check-section-clean.ts  check-session-sections.ts  check-witness-context.ts  check-witness-events.ts  docker-compose.yml  jest.config.js  package.json  project-structure.md  run-phase1-all.sh  show-vocalife-hierarchy.ts  test-convention.ts  test-feature-06.js  test-improvements.ts  test-name-parsing.ts  tsconfig.json  update-query-configs.js
matter-tracker/: README.md  docker-compose.yml  init-claude-context.sh  matter-tracker-doc.md  pgadmin-servers.json  setup-matter-tracker.sh
neumiplaylist/: CLAUDE_INSTRUCTIONS.md  DIRECTORY_CAPTURE_GUIDE.md  PROJECT_OVERVIEW.md  QUICKSTART.md  README.md  SETUP_CLAUDE_CODE.md  TROUBLESHOOTING_PLAYBACK.md  analyze_videos.sh  batch_reencode.py  generate_playlists.bat  generate_playlists.py  generate_playlists.sh  mount_neumi_optimized.sh  playlist_summary.txt  scan_videos.bat  scan_videos.py  scan_videos.sh  test_fragmentation.bat  test_sd_speed.sh  video_library.csv
timesheet-app/: CLAUDE.md  README.md  docker-compose.yml  pgadmin-servers.json  pgadmin-setup-guide.md  quick-start-mac.md
vbamacros/: BooleanSummaryFuncs.vba  EmailFuncs.vba  EmailParseFuncs.vba  FileNameFuncs.vba  GenericFuncs.vba  ImportExportFuncs.vba  PrivBreakerFuncs.vba  ProcessApplicabilityData.vba  ProcessCitationRanges.vba  RemoveExtensions.vba  SpamFuncs.vba  SummarizeBooleanData.vba
vstrender/: .gitignore  CMakeLists.txt  README.md  c_major_scale_fixed.mid  dexed_setup_guide.md  midi_generator.py  render_dexed_patches.bat  verify_paths.bat  verify_vst3_structure.bat
vstrender/Source/: Main.cpp  MidiUtilities.h  TestMidiGenerator.cpp
vstrender/configs/: dexed_basic_test.json  dexed_bass_test.json  dexed_efx_test.json  dexed_kr_test.json  dexed_pad_test.json  dexed_patch_test.json  modartt_kr_test.json  processing_config.json  sample_config.json  sample_config10.json  sample_config11.json  sample_config2.json  sample_config3.json  sample_config4.json  sample_config5.json  sample_config6.json  sample_config7.json  sample_config8.json  sample_config9.json
(+1825 files in other folders)
